syntax = "proto3";

message CreateOrderRequest{
    int32 customerID = 1;
    int32 productID  = 2;
    int32 quantity = 3;
}

message CreateOrderResponse{
    string status = 1;
}

